# open-otc-trading

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  skills-lock.json
.githooks/: pre-push
config/: agent_channels.example.yml
docs/: memory-component-contracts.md
frontend/: CLAUDE.md  UI_STYLE_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: compaction_ab_benchmark.py  generate_demo.py  semantic_layer_ab_smoke.py
tests/: _scripted_graph.py  conftest.py  test_agent_channels_router.py  test_agent_integration.py  test_agent_product_tool_contract.py  test_agent_registry_config.py  test_agent_thread_source_schema.py  test_agent_tools.py  test_agents_helpers.py  test_agents_rebuild.py  test_api.py  test_arena_api.py  test_arena_fixture_determinism.py  test_arena_judge.py  test_arena_migration.py  test_arena_model_selection.py  test_arena_models.py  test_arena_rfq_cleanup.py  test_arena_runner.py  test_arena_runner_high_board.py  test_arena_scoring.py  test_arena_store.py  test_arena_trace_harvest.py  test_artifact_tools.py  test_asian_fixing_capture.py  test_asian_fixing_lifecycle.py  test_asian_fixing_tools.py  test_asian_pricing_wiring.py  test_asian_schedule_materialization.py  test_asian_schedules.py  test_asian_weight_persistence.py  test_assertion_any_of.py  test_assumptions.py  test_assumptions_domain.py  test_async_agents_hitl.py  test_async_agents_integration.py  test_async_agents_tools.py  test_async_agents_unit.py  test_audit_endpoint.py  (+303 more)
(+1097 files in other folders)
