[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-otc-trading"
version = "0.1.0"
description = "AI OTC derivatives research, pricing, and RFQ platform MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.17.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "python-docx>=1.1.2",
  "pandas>=2.0.0",
  "pyarrow>=18.0.0",
  "openpyxl>=3.1.0",
  "matplotlib>=3.9.0",
  "plotly>=5.24.0",
  "seaborn>=0.13.0",
  "scipy>=1.14.0",
  "pyyaml>=6.0",
  "langchain>=1.3.0",
  "langchain-deepseek>=1.0.1",
  "langchain-openai>=1.0.0",
  "langgraph>=1.2.0",
  "aiosqlite>=0.20.0",
  "langsmith>=0.4.0",
  "deepagents[quickjs]>=0.6.7",
  "akshare>=1.16.0",
  "quantark>=0.1.0",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "langchain-sandbox>=0.0.3",
  "typer>=0.12.0",
  "lark-oapi>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
open-otc = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
addopts = "-q"
